# vpc-switched-motion

./: .gitignore  .gitmodules  GETTING_STARTED.md  README.md  generateGPdata.m  init.m  plot_results.m  startup.m
data/: GP_1.mat  GP_2.mat  GP_full.mat  unitySimOldResult.mat  unitySimResult.mat
docker/: README.md
docker/ros_melodic/: Dockerfile  docker-compose.yml  set-up-workspace
lib/: truncateSimResult.m  vanderpol.m
ros/: .gitignore
ros/custom_msgs/: CMakeLists.txt  package.xml
ros/custom_msgs/msg/: PosRot.msg  VisMea.msg
simulink/: generateData.slx  matlabVPC.slx  unityVPC.slx
unityVPC/: .gitignore
unityVPC/Assets/: msgbrowser_settings.asset
unityVPC/Assets/Animation/: birdController.controller
unityVPC/Assets/Materials/: estimate_point blue.mat  estimate_point green.mat  estimate_point red.mat  estimate_point yellow.mat  feature_point blue.mat  feature_point green.mat  feature_point red.mat  feature_point yellow.mat
unityVPC/Assets/Prefabs/: CamSwitcher.prefab  bird.prefab  drone_orange.prefab  drone_red.prefab  drone_white.prefab  estimate.prefab
unityVPC/Assets/Resources/: ROSConnectionPrefab.prefab
unityVPC/Assets/Scenes/: Forest.unity
unityVPC/Assets/Scripts/: CamSwitch.cs  CameraController.cs  DroneController.cs  EstimationSubscriber.cs  FreeCameraMovement.cs  PosRotPublisher.cs  TargetController.cs  TargetController_old.cs  VirtualCamPublisher.cs
unityVPC/Assets/Shader/: unlit_transparency_color.shader
unityVPC/ProjectSettings/: InputManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
(+4 files in other folders)
