<?xml version="1.0"?>
<package format="2">
  <name>custom_msgs</name>
  <version>0.0.1</version>
  <description>Messages for the DigiTwin package (ROS1 version)</description>

  <maintainer email="marcoomainska@g.ecc.u-tokyo.ac.jp">Marco Omainska</maintainer>


  <license>CC BY 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>